# rust-process-mgr

watchdog/: Cargo.toml  watchdog.json
watchdog/doc/: interface.md  readme.md
watchdog/src/: lib.rs  main.rs
watchdog/src/config/: file.rs  mod.rs
watchdog/src/core/: dispatch.rs
watchdog/src/process/: check.rs  control.rs  mod.rs  status.rs
watchdog/src/process/kill/: linux.rs  mod.rs  windows.rs
watchdog/src/process/stat/: linux.rs  mod.rs  windows.rs
watchdog/src/templates/: html.html  html.rs
watchdog/src/tools/: compare.rs
watchdog/src/webserver/: server.rs
watchdog/src/webserver/handlers/: api.rs  auth.rs  index.rs  mod.rs  web.rs
watchdog/sysinfo/src/linux/: process.rs  system.rs
watchdog/templates/: process_handler.hbs
watchdog_client/: Cargo.toml
watchdog_client/doc/: readme.md
watchdog_client/golang/client/: restart.go  stop.go
watchdog_client/src/: main.rs
watchdog_client/src/client/: mod.rs  restart.rs  status.rs  stop.rs
