[package]
name = "watchdog"
version = "0.1.0"
authors = ["MwlLj <731025894@qq.com>"]
edition = "2018"

[dependencies]
serde_json = "*"
serde = "*"
serde_derive = "*"
sysinfo = { path = "./sysinfo" }

rust_parse = { git = "https://github.com/MwlLj/rust_parse" }

tokio = "0.1.10"
tower-web = { git = "https://github.com/carllerche/tower-web" }
tokio-rustls = "0.8.0"
