[package]
name = "watchdog"
version = "0.1.0"
authors = ["MwlLj <731025894@qq.com>"]
edition = "2018"

[dependencies]
serde_json = "*"
serde = "*"
serde_derive = "*"
sysinfo = { path = "./sysinfo" }
chrono = "0.4.6"
base64 = "*"

rust_parse = { git = "https://github.com/MwlLj/rust_parse" }

tiny_http = { git = "https://github.com/tiny-http/tiny-http" }
