[package]
name = "watchdog"
version = "0.1.0"
authors = ["MwlLj <731025894@qq.com>"]
edition = "2018"

[dependencies]
serde_json = "*"
serde = "*"
serde_derive = "*"
chrono = "0.4.6"
base64 = "*"

rust_parse = { git = "https://github.com/MwlLj/rust_parse" }

tiny_http = { git = "https://github.com/tiny-http/tiny-http" }

libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "handleapi", "ioapiset", "minwindef", "pdh", "psapi", "synchapi", "sysinfoapi", "tlhelp32", "winbase", "winerror", "winioctl", "winnt"] }

